# alfa-hack-rag

./: README.md  pyproject.toml
nbs/: hit_at_k.ipynb  ru_en_RoSBERTa.ipynb
ranking_results/: 28_2_submit.csv  submit2025-11-13 21:11:55.455071.csv  submit_FRIDA.csv  submit_ru_en_RoSBERTa.csv  submit_user2_small_25.csv
