[tool.poetry]
name = "alfa-hack-rag"
version = "0.1.0"
description = ""
authors = ["adpak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
ipykernel = "^7.1.0"
tqdm = "^4.67.1"
ipywidgets = "^8.1.8"
transformers = "^4.57.1"
sentence-transformers = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
